--- a/Team_11_Assignment.ipynb
+++ b/Team_11_Assignment.ipynb
@@ -21,9 +21,9 @@
    "metadata": {},
    "source": [
     "## Group Assignment\n",
-    "### Team Number: XX\n",
-    "### Team Member Names:\n",
-    "### Team Strategy Chosen: __________(RISKY OR SAFE)"
+    "### Team Number: 11\n",
+    "### Team Member Names: Jeffrey, Ray, Baldeep\n",
+    "### Team Strategy Chosen: RISKY (RISKY OR SAFE)"
    ]
   },
   {
@@ -47,7 +47,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -61,7 +61,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
