--- a/Team_11_Assignment.ipynb
+++ b/Team_11_Assignment.ipynb
@@ -272,9 +272,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "cfm1",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "cfm1"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
